2010-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/gtk/ScintillaGTK.cxx:
   Backport Scintilla HG fix: Remove styling idle in destructor to
   avoid crashing when idle called after ScintillaGTK instance
   destroyed (fixes #3111058).


2010-11-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   Add 'Open in New Window' command in the notebook tab menu (based on
   patch by Matthew Brush, thanks - #3118059).


2010-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.cpp, data/filetypes.vala, data/filetypes.glsl,
   data/filetypes.cs, data/filetypes.c:
   Disable preprocessor #define tracking for the CPP lexer
   (enabled by default in Scintilla).
 * scintilla/scintilla_changes.patch:
   Update for Scintilla 2.22.


2010-11-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/*:
   Update Scintilla to version 2.22.
   Keep Scintilla's directory structure mostly and only
   remove unused lexers.
 * wscript:
   Update Waf-based build system for Scintilla.
 * scintilla/Makefile.am, scintilla/include/Makefile.am:
   Update autotools-based build system for Scintilla.
 * scintilla/makefile.win32:
   Update Windows-Makefile-based build system for Scintilla.


2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Explain how to grep the source for Scintilla lexer properties.
 * src/sidebar.c, src/callbacks.c, src/main.c:
   Fix auto-displaying of sidebar tab bar when sidebar is reshown.
   Only auto-display symbols and documents tabs when showing the
   sidebar if there are no plugin tabs.
   Don't hide the sidebar on startup if only plugin tabs are visible
   (fixes #3101867).
 * src/plugindata.h:
   Make GEANY_API_VERSION, GEANY_ABI_VERSION macros instead of enums
   so you can protect code with '#if GEANY_API_VERSION >= 200'.
 * src/plugindata.h: